wrapped filter function in if statement to avoid error. Refactored. Moved some business logic from the controller to the service

--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ input[type=text] {
     display: none;
   }
   .hamburger{
-    display: block
+    display: block;
   }
 }
 @media (max-width:420px){
